# evds-visualize

./: .env.example  .gitignore  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: cache.py  config.py  evds_client.py  hierarchy.py  indicators.py  main.py  search.py
backend/app/routes/: catalog.py  composition.py  dashboard.py  health.py  search.py  series.py
backend/evds_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
explore/: 01_enumerate.py  02_probe.py  03_probe_leaves.py  04_inspect_series.py  05_fetch_values.py  06_validate_datagroups.py  07_inspect_tree.py  08_find_indicators.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Breadcrumb.tsx  CategoryTree.tsx  Disclaimer.tsx  IndicatorCard.tsx  SeriesChart.tsx  SeriesSearch.tsx  Sparkline.tsx  TimelineScrubber.tsx  Treemap.tsx
frontend/src/lib/: analytics.tsx  api.ts  datagroups.ts  export.ts  format.ts  transforms.ts
frontend/src/routes/: explorer.tsx  landing.tsx  map.tsx
nginx/: default.conf
